tests/paczka1/small_fuzzy/24413854.err
Error in line 3: rMSxsHkkX1 S745 18,9
Error in line 5: rMSxsHkkX1 A860 2,5
Error in line 11: rMSxsHkkX1 S695 77,6
